# blue-ice-farm

./: .gitignore  README.md  ice.py  pyproject.toml
src/blue_ice_sim/: ice.py
